@@ -26,7 +26,7 @@ import ti4.service.draft.draftables.AndcatReferenceCardsDraftable.ReferenceCardP
 public class AndcatReferenceCardsMessageHelper {
     private static final String USER_SUMMARY_PREFIX = "### Selecting which faction for what purpose\n";
 
-    private AndcatReferenceCardsDraftable draftable;
+    private final AndcatReferenceCardsDraftable draftable;
 
     public AndcatReferenceCardsMessageHelper(AndcatReferenceCardsDraftable draftable) {
         this.draftable = draftable;
@@ -41,7 +41,6 @@ public class AndcatReferenceCardsMessageHelper {
                 player.getCardsInfoThread(),
                 player.getRepresentationUnfogged() + " Here's an overview of the packages:");
         sendPackageInfos(player.getCardsInfoThread(), packages);
-        updatePackagePickSummary(draftManager);
     }
 
     public static void sendPackageInfos(MessageChannel channel, List<ReferenceCardPackage> packages) {
@@ -53,7 +52,8 @@ public class AndcatReferenceCardsMessageHelper {
         for (ReferenceCardPackage refPackage : packages) {
             StringBuilder message = new StringBuilder();
 
-            message.append("### Faction Package " + refPackage.key())
+            message.append("### Faction Package ")
+                    .append(refPackage.key())
                     .append(System.lineSeparator())
                     .append(System.lineSeparator());
 
@@ -84,7 +84,7 @@ public class AndcatReferenceCardsMessageHelper {
         }
         List<FactionModel> factionsInPackage = AndcatReferenceCardsDraftable.getFactionsInPackage(refPackage);
         MessageV2Builder messageBuilder = new MessageV2Builder(cardsInfoThread, 3);
-        boolean isChoiceFinalized = refPackage.choicesFinal() != null && refPackage.choicesFinal();
+        boolean isChoiceFinalized = false;
 
         messageBuilder.appendLine(player.getRepresentation() + " Select how each faction will be used.");
 
@@ -103,7 +103,7 @@ public class AndcatReferenceCardsMessageHelper {
                     faction.getAlias(),
                     isSelectedAnywhere,
                     factionForPart,
-                    isChoiceFinalized,
+                    false,
                     faction.getShortName(),
                     faction.getFactionEmoji())));
         }
@@ -124,7 +124,7 @@ public class AndcatReferenceCardsMessageHelper {
                     faction.getAlias(),
                     isSelectedAnywhere,
                     factionForPart,
-                    isChoiceFinalized,
+                    false,
                     faction.getShortName(),
                     faction.getFactionEmoji())));
         }
@@ -146,19 +146,17 @@ public class AndcatReferenceCardsMessageHelper {
                     faction.getAlias(),
                     isSelectedAnywhere,
                     factionForPart,
-                    isChoiceFinalized,
+                    false,
                     faction.getShortName(),
                     faction.getFactionEmoji())));
         }
         messageBuilder.append(Container.of(containerComponents));
 
         messageBuilder.appendLine("When you're satisfied with your choices, lock them in:");
-        Button finalizeButton =
-                Buttons.gray(this.draftable.makeButtonId("assign_complete"), "Finish assigning factions");
+        Button finalizeButton = Buttons.gray(draftable.makeButtonId("assign_complete"), "Finish assigning factions");
         boolean canFinalize = refPackage.homeSystemFaction() != null
                 && refPackage.startingUnitsFaction() != null
-                && refPackage.speakerOrderFaction() != null
-                && !isChoiceFinalized;
+                && refPackage.speakerOrderFaction() != null;
         if (!canFinalize) {
             finalizeButton = finalizeButton.asDisabled();
         }
@@ -174,7 +172,7 @@ public class AndcatReferenceCardsMessageHelper {
         for (String playerUserId : draftManager.getPlayerUserIds()) {
             Player player = draftManager.getGame().getPlayer(playerUserId);
             String playerRepresentation = player.getRepresentation(true, false, true, true);
-            List<DraftChoice> playerPicks = draftManager.getPlayerPicks(playerUserId, this.draftable.getType());
+            List<DraftChoice> playerPicks = draftManager.getPlayerPicks(playerUserId, draftable.getType());
             messageBuilder.append(System.lineSeparator());
             if (playerPicks.isEmpty()) {
                 messageBuilder
@@ -184,7 +182,7 @@ public class AndcatReferenceCardsMessageHelper {
             }
 
             ReferenceCardPackage refPackage =
-                    this.draftable.getPackageByChoiceKey(playerPicks.get(0).getChoiceKey());
+                    draftable.getPackageByChoiceKey(playerPicks.getFirst().getChoiceKey());
             if (refPackage == null) {
                 messageBuilder.append(playerRepresentation).append(" has an invalid package pick.");
                 continue;
@@ -192,7 +190,11 @@ public class AndcatReferenceCardsMessageHelper {
 
             if (refPackage.choicesFinal() != null && refPackage.choicesFinal()) {
                 messageBuilder.append(playerRepresentation).append(": 🔒");
-                continue;
+                if (refPackage.homeSystemFaction() != null
+                        && refPackage.startingUnitsFaction() != null
+                        && refPackage.speakerOrderFaction() != null) {
+                    continue;
+                }
             }
 
             messageBuilder.append(playerRepresentation).append(": ");
@@ -300,7 +302,7 @@ public class AndcatReferenceCardsMessageHelper {
 
         // Finalize choices button
         String buttonLabel = isChoiceFinalized ? "Choices locked!" : "Finish assigning factions";
-        Button finalizeButton = Buttons.gray(this.draftable.makeButtonId("assign_complete"), buttonLabel);
+        Button finalizeButton = Buttons.gray(draftable.makeButtonId("assign_complete"), buttonLabel);
         boolean canFinalize = refPackage.homeSystemFaction() != null
                 && refPackage.startingUnitsFaction() != null
                 && refPackage.speakerOrderFaction() != null
@@ -338,7 +340,7 @@ public class AndcatReferenceCardsMessageHelper {
             boolean isChoiceFinalized,
             String factionName,
             String factionEmoji) {
-        String buttonId = this.draftable.makeButtonId("assign_" + setupPart + "_" + factionAlias);
+        String buttonId = draftable.makeButtonId("assign_" + setupPart + "_" + factionAlias);
         Button button = Buttons.green(buttonId, "Pick " + factionName, factionEmoji);
         if (factionAlias.equals(factionForPart)) {
             button = Buttons.red(buttonId, "Unpick " + factionName, factionEmoji);
@@ -363,14 +365,14 @@ public class AndcatReferenceCardsMessageHelper {
         }
         String setupPart = tokens[0];
 
-        String playerChoiceKey = draftManager.getPlayerPicks(playerUserId, this.draftable.getType()).stream()
+        String playerChoiceKey = draftManager.getPlayerPicks(playerUserId, draftable.getType()).stream()
                 .map(DraftChoice::getChoiceKey)
                 .findFirst()
                 .orElse(null);
         if (playerChoiceKey == null) {
             return "You have not picked a reference card package.";
         }
-        ReferenceCardPackage refPackage = this.draftable.getPackageByChoiceKey(playerChoiceKey);
+        ReferenceCardPackage refPackage = draftable.getPackageByChoiceKey(playerChoiceKey);
         if (refPackage == null) {
             return "Cannot find reference card package for your pick.";
         }
@@ -379,7 +381,15 @@ public class AndcatReferenceCardsMessageHelper {
                     + "You have already finalized your reference card assignments.";
         }
 
-        if (setupPart.equals("complete")) {
+        if ("complete".equals(setupPart)) {
+            // Make sure everything is picked
+            if (refPackage.homeSystemFaction() == null
+                    || refPackage.startingUnitsFaction() == null
+                    || refPackage.speakerOrderFaction() == null) {
+                return DraftButtonService.USER_MISTAKE_PREFIX
+                        + "You must assign all factions before finalizing your choices.";
+            }
+
             // Finalize choices
             refPackage = new ReferenceCardPackage(
                     refPackage.key(),
@@ -389,14 +399,14 @@ public class AndcatReferenceCardsMessageHelper {
                     refPackage.speakerOrderFaction(),
                     true);
             Integer packageKey = Integer.parseInt(playerChoiceKey.substring("package".length()));
-            this.draftable.getReferenceCardPackages().put(packageKey, refPackage);
+            draftable.getReferenceCardPackages().put(packageKey, refPackage);
 
             // Disable buttons
             Player player = draftManager.getGame().getPlayer(playerUserId);
             updatePackageButtons(event, draftManager, player, refPackage);
             updatePackagePickSummary(draftManager);
 
-            if (this.draftable.whatsStoppingSetup(draftManager) == null) {
+            if (draftable.whatsStoppingSetup(draftManager) == null) {
                 // TODO: Print speaker order and priority numbers
                 // TODO: Block for Keleres to pick their HS tile
                 // TODO: Make sure setup messages go to the main game channel, not the event channel (e.g. frontier
@@ -504,7 +514,7 @@ public class AndcatReferenceCardsMessageHelper {
         }
 
         Integer packageKey = Integer.parseInt(playerChoiceKey.substring("package".length()));
-        this.draftable.getReferenceCardPackages().put(packageKey, refPackage);
+        draftable.getReferenceCardPackages().put(packageKey, refPackage);
 
         // Update buttons
         Player player = draftManager.getGame().getPlayer(playerUserId);
